Add swagger Update Product
